@@ -10,6 +10,9 @@
   * agi_DID_route.agi: Add "ON DUPLICATE KEY UPDATE"" into
       "INSERT INTO call_log" (2017-050).
   * new b2sum.sh to build checksums (2017-051).
+  * Add upstream Rev. 2850:
+    - non_agent_api.php: Added ability for update_lead function
+      insert_if_not_found leads to be inserted into the hopper.
   
 2.25.17
 
